v6.8.3 7th February 2024
  - Documentation fixes.
  - Bug fixes.

v6.8.2 24th January 2024
  - Added the --deprecations-are-errors command line option to all build tools.
  - All generated files are UTF-8 encoded.

v6.8.1 12th December 2023
  - Bug fixes.

v6.8.0 7th November 2023
  - Python v3.7 is no longer supported.
  - The latest version of ABI v13 is v13.7.0.
  - The latest version of ABI v12 is v12.14.0.
  - Added support for specifying the project metadata using the '[project]'
    section of pyproject.toml as defined in PEP 621.  The use of the
    '[tool.sip.metadata]' is now deprecated.
  - The conversion to a pure Python implementation is now complete.

v6.7.12 10th October 2023
  - The latest version of ABI v13 is v13.6.0.
  - The latest version of ABI v12 is v12.13.0.
  - Added sipPyTypeDictRef() to the v12 and v13 ABIs.  sipPyTypeDict() is now
    deprecated and must not be used with Python v3.12 and later.
  - Classes will automatically support being iterated over if they implement
    '__getitem__()' or 'operator[]' and have a method annotated with '__len__'.
  - Bug fixes.

v6.7.11 31st July 2023
  - Bug fixes.

v6.7.10 17th July 2023
  - Added the --minimum-glibc-version command line option to sip-wheel.
  - The latest version of ABI v13 is v13.5.2.
  - The latest version of ABI v12 is v12.12.2.
  - Bug fixes.

v6.7.9 12th April 2023
  - The latest version of ABI v13 is v13.5.1.
  - The latest version of ABI v12 is v12.12.1.
  - Bug fixes.

v6.7.8 4th April 2023
  - The latest version of ABI v13 is v13.5.0.
  - The latest version of ABI v12 is v12.12.0.
  - The 'wheel-includes' value of the 'tool.sip.project' section of
    pyproject.toml now supports the use of absolute file patterns.
  - Replaced the use of the 'toml' package with the standard library 'tomllib'
    package for Python v3.11 and later, and the 'tomli' package for earlier
    versions of Python.
  - Bug fixes.

v6.7.7 4th February 2023
  - Bug fixes.

v6.7.6 25th January 2023