@@ -110,18 +110,18 @@ file.
             **signals:**]
 
     *constructor* ::= [**explicit**] *name* **(** [*argument-list*] **)**
-            [*exceptions*] [*function-annotations*]
+            [**noexcept**] [*function-annotations*]
             [*c++-constructor-signature*] **;** [:directive:`%Docstring`]
             [:directive:`%MethodCode`]
 
     *c++-constructor-signature* ::= **[(** [*argument-list*] **)]**
 
-    *destructor* ::= [**virtual**] **~** *name* **()** [*exceptions*] [**= 0**]
+    *destructor* ::= [**virtual**] **~** *name* **()** [**noexcept**] [**= 0**]
             [*function-annotations*] **;** [:directive:`%MethodCode`]
             [:directive:`%VirtualCatcherCode`]
 
     *method* ::= [**Q_SIGNAL**] [**Q_SLOT**] *type* *name* **(**
-            [*argument-list*] **)** [**const**] [**final**] [*exceptions*]
+            [*argument-list*] **)** [**const**] [**final**] [**noexcept**]
             [**= 0**] [*function-annotations*] [*c++-signature*] **;**
             [:directive:`%Docstring`] [:directive:`%MethodCode`]
 
@@ -131,7 +131,7 @@ file.
 
     *virtual-method* ::= [**Q_SIGNAL**] [**Q_SLOT**] **virtual** *type* *name*
             **(** [*argument-list*] **)** [**const**] [**final**]
-            [*exceptions*] [**= 0**] [*function-annotations*] [*c++-signature*]
+            [**noexcept**] [**= 0**] [*function-annotations*] [*c++-signature*]
             **;** [:directive:`%MethodCode`] [:directive:`%VirtualCatcherCode`]
             [:directive:`%VirtualCallCode`]
 
@@ -158,12 +158,12 @@ file.
 
     *operator* ::= *operator-type*
             **(** [*argument-list*] **)** [**const**] [**final**]
-            [*exceptions*] [*function-annotations*] **;**
+            [**noexcept**] [*function-annotations*] **;**
             [:directive:`%MethodCode`]
 
     *virtual-operator* ::= **virtual** *operator-type*
             **(** [*argument-list*] **)** [**const**] [**final**]
-            [*exceptions*] [**= 0**] [*function-annotations*] **;**
+            [**noexcept**] [**= 0**] [*function-annotations*] **;**
             [:directive:`%MethodCode`] [:directive:`%VirtualCatcherCode`]
             [:directive:`%VirtualCallCode`]
 
@@ -192,7 +192,7 @@ file.
 
     *enum-line* ::= [:directive:`%If` | *name* [*enum-annotations*] **,**
 
-    *function* ::= *type* *name* **(** [*argument-list*] **)** [*exceptions*]
+    *function* ::= *type* *name* **(** [*argument-list*] **)** [**noexcept**]
             [*function-annotations*] **;** [:directive:`%Docstring`]
             [:directive:`%MethodCode`]
 
@@ -250,10 +250,6 @@ file.
             **SIP_PendingDeprecationWarning** | **SIP_ResourceWarning** |
             **SIP_RuntimeWarning** | **SIP_SyntaxWarning** |
             **SIP_UnicodeWarning** | **SIP_UserWarning**]
-
-    *exceptions* ::= **noexcept** | **throw (** [*exception-list*] **)**
-
-    *exception-list* ::= *scoped-name* [**,** *exception-list*]
 
     *argument-list* ::= *argument* [**,** *argument-list*] [**,** **...**]
 
