@@ -1,4 +1,7 @@
 v6.8.3 7th February 2024
+  - The use of 'throw' specifiers is now deprecated and will be removed in SIP
+    v7.  Instead of 'throw()', 'noexcept' should be used.  Other forms of
+    'throw' are no longer required.
   - Documentation fixes.
   - Bug fixes.
 
